<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/buch"
    tools:context=".CreateNewPromptFragment">


    <TextView
        android:id="@+id/showTitle"
        android:layout_width="341dp"
        android:layout_height="38dp"
        android:fontFamily="casual"
        android:text="@string/title_book"
        android:textAlignment="center"
        android:textColor="#455A64"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.404"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.072" />

    <TextView
        android:id="@+id/showGenre"
        android:layout_width="209dp"
        android:layout_height="39dp"
        android:fontFamily="casual"
        android:text="@string/the_genre_is"
        android:textAlignment="center"
        android:textColor="#455A64"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.465"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.151" />

    <TextView
        android:id="@+id/showLocation"
        android:layout_width="319dp"
        android:layout_height="43dp"
        android:fontFamily="casual"
        android:text="@string/where_does_it_take_place"
        android:textColor="#455A64"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.402"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/showMainCharacter"
        android:layout_width="174dp"
        android:layout_height="37dp"
        android:layout_marginStart="36dp"
        android:fontFamily="casual"
        android:text="@string/the_main_character_is"
        android:textColor="#455A64"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.332" />

    <TextView
        android:id="@+id/showEvent"
        android:layout_width="182dp"
        android:layout_height="39dp"
        android:fontFamily="casual"
        android:text="@string/what_s_happening"
        android:textColor="#455A64"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.157"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.413" />

    <TextView
        android:id="@+id/showKeyElement"
        android:layout_width="209dp"
        android:layout_height="39dp"
        android:fontFamily="casual"
        android:text="@string/this_plays_a_very_important_role"
        android:textColor="#455A64"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.717"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.578" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="316dp"
        android:layout_height="39dp"
        android:fontFamily="casual"
        android:text="@string/once_upon_a_time_the_idle_life_of"
        android:textColor="#455A64"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.258" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="145dp"
        android:layout_height="39dp"
        android:fontFamily="casual"
        android:text="@string/gets_disrupted_when"
        android:textColor="#455A64"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.789"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.332" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="105dp"
        android:layout_height="39dp"
        android:fontFamily="casual"
        android:text="@string/and_suddenly"
        android:textColor="#455A64"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.578" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="313dp"
        android:layout_height="39dp"
        android:fontFamily="casual"
        android:text="@string/seems_to_be_playing_a_very_important_role"
        android:textColor="#455A64"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.377"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.663" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="212dp"
        android:layout_height="65dp"
        android:fontFamily="casual"
        android:text="@string/now_it_s_your_turn_what_happens_next"
        android:textAlignment="center"
        android:textColor="#455A64"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.822" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="117dp"
        android:layout_height="39dp"
        android:fontFamily="casual"
        android:text="@string/takes_places_in"
        android:textAlignment="center"
        android:textColor="#455A64"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.809"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.413" />


</androidx.constraintlayout.widget.ConstraintLayout>
