<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_emerald"
    tools:context=".CreateNewPromptFragment">


    <TextView
        android:id="@+id/createTextView"
        android:layout_width="306dp"
        android:layout_height="43dp"
        android:fontFamily="casual"
        android:text="@string/let_s_get_started"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04" />

    <TextView
        android:id="@+id/genreTextView"
        android:layout_width="251dp"
        android:layout_height="42dp"
        android:fontFamily="casual"
        android:text="@string/the_genre_is"
        android:textColor="#455A64"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.301" />

    <TextView
        android:id="@+id/locationTextView"
        android:layout_width="251dp"
        android:layout_height="43dp"
        android:fontFamily="casual"
        android:text="@string/where_does_it_take_place"
        android:textColor="#455A64"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.687"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.566" />

    <TextView
        android:id="@+id/mainCharacterTextView"
        android:layout_width="251dp"
        android:layout_height="42dp"
        android:fontFamily="casual"
        android:text="@string/the_main_character_is"
        android:textColor="#455A64"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.193"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.481" />

    <TextView
        android:id="@+id/eventTextView"
        android:layout_width="251dp"
        android:layout_height="43dp"
        android:fontFamily="casual"
        android:text="@string/what_s_happening"
        android:textColor="#455A64"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.39" />

    <TextView
        android:id="@+id/keyElementTextView"
        android:layout_width="251dp"
        android:layout_height="42dp"
        android:fontFamily="casual"
        android:text="@string/this_plays_a_very_important_role"
        android:textColor="#455A64"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.193"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.648" />

    <EditText
        android:id="@+id/title_tv"
        android:layout_width="251dp"
        android:layout_height="48dp"
        android:autofillHints="enter a title..."
        android:ems="10"
        android:fontFamily="casual"
        android:hint="@string/enter_title"
        android:inputType="textPersonName"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.612"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.207"
        tools:ignore="SpeakableTextPresentCheck,TextContrastCheck" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="168dp"
        android:layout_height="26dp"
        android:fontFamily="casual"
        android:text="@string/quick_think_of_a_title"
        android:textColor="#455A64"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.065"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.131" />

    <Button
        android:id="@+id/savePromptButton"
        android:layout_width="172dp"
        android:layout_height="69dp"
        android:backgroundTint="@color/coral_reef"
        android:text="@string/save_prompt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.535"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.782"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/goToHomeButton"
        android:layout_width="140dp"
        android:layout_height="63dp"
        android:backgroundTint="@color/cardview_dark_background"
        android:text="@string/home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.162"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.905"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/goToDetails"
        android:layout_width="140dp"
        android:layout_height="63dp"
        android:backgroundTint="@color/wintergreen_dream"
        android:text="@string/show_prompt"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.815"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.905"
        tools:ignore="TextContrastCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>